--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@types/node": "^10.12.18",
     "@types/powerapps-component-framework": "^1.2.0",
-    "luxon": "^1.22.0"
+    "@uifabric/react-cards": "^0.109.24",
+    "luxon": "^1.22.0",
+    "office-ui-fabric-react": "^7.94.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/luxon": "^1.21.0",
+    "@types/react": "^16.9.21",
+    "@types/react-dom": "^16.9.5",
     "pcf-scripts": "^1",
     "pcf-start": "^1"
   }
