--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -11,6 +11,10 @@ stages:
   jobs:
   - job: "build_job"
     steps:
+    - task: Npm@1
+      displayName: "Run 'npm install'"
+      inputs:
+        command: 'install'
     - task: VSBuild@1
       displayName: "Build"
       inputs:
