--- a/pipelines/cd.yml
+++ b/pipelines/cd.yml
@@ -1,7 +1,7 @@
 variables:
   version: '1.2.0'
 
-name: $(version)$(rev:.r)
+name: $(version)$(build.buildId)
 
 trigger:
 - master
@@ -11,6 +11,7 @@ stages:
   parameters:
     name: 'cd_build'
     configuration: 'Release'
+    tag: true
     publish: true
 - stage: 'Release'
   variables:
@@ -32,8 +33,8 @@ stages:
         action: 'create'
         target: '$(Build.SourceVersion)'
         tagSource: 'gitTag'
-        assets: $(artifactsDirectory)/*.zip
+        assets: $(artifactsDirectory)/Solutions/*.zip
         changeLogCompareToRelease: 'lastFullRelease'
         changeLogType: 'commitBased'
-        isPreRelease: true
+        isPreRelease: false
 
