--- a/pipelines/templates/stages/build.yml
+++ b/pipelines/templates/stages/build.yml
@@ -18,6 +18,8 @@ stages:
     pool:
       vmImage: 'windows-latest'
     steps:
+    - checkout: self
+      persistCredentials: true
     - task: Npm@1
       displayName: "Run 'npm install'"
       inputs:
