--- a/pipelines/templates/stages/build.yml
+++ b/pipelines/templates/stages/build.yml
@@ -10,6 +10,7 @@ stages:
 
   variables:
     artifactName: 'Solutions'
+    artifactPath: 'bin\${{ parameters.configuration }}\*.zip'
 
   dependsOn: ${{ parameters.dependsOn }}
   jobs:
@@ -28,7 +29,7 @@ stages:
       displayName: "Build"
       inputs:
         solution: 'src\Solutions\Solutions.cdsproj'
-        msbuildArgs: '/t:build /p:configuration=${{ parameters.configuration }};OutDir=$(build.stagingDirectory) /restore'
+        msbuildArgs: '/t:build /p:configuration=${{ parameters.configuration }} /restore'
     - powershell: |
         echo "Tagging Build: $($env:BUILD_NUMBER)"
         git tag $env:BUILD_NUMBER
@@ -36,9 +37,9 @@ stages:
       displayName: 'Tag the build'
       env:
         BUILD_NUMBER: $(build.buildNumber)
-        GIT_REDIRECT_STDERR: 2>&1 # because git writes some output to STDERR and the agent things the script job failed
+        GIT_REDIRECT_STDERR: 2>&1
       condition: and(succeeded(), eq(${{ parameters.tag }}, true))
-    - publish: '$(build.stagingDirectory)\*.zip'
+    - publish: '$(artifactPath)'
       displayName: 'Publishing $(artifactName)'
       artifact: '$(artifactName)'
       condition: and(succeeded(), eq(${{ parameters.publish }}, true))
