--- a/pipelines/cd.yml
+++ b/pipelines/cd.yml
@@ -32,7 +32,7 @@ stages:
                   targetPath: '$(artifactsDirectory)'
               - task: GitHubRelease@1
                 inputs:
-                  gitHubConnection: 'azure-pipelines-github-release'
+                  gitHubConnection: 'github.com_mehmetseckin'
                   repositoryName: '$(Build.Repository.Name)'
                   action: 'create'
                   target: '$(Build.SourceVersion)'
