Use semver compatible control version

--- a/pipelines/cd.yml
+++ b/pipelines/cd.yml
@@ -13,6 +13,7 @@ stages:
     configuration: 'Release'
     tag: true
     publish: true
+    version: $(version)
 - stage: 'Release'
   variables:
     artifactsDirectory: '$(Pipeline.Workspace)/artifacts'
