Use single quotes to substitute version variable

--- a/pipelines/cd.yml
+++ b/pipelines/cd.yml
@@ -13,7 +13,7 @@ stages:
     configuration: 'Release'
     tag: true
     publish: true
-    version: $(version)
+    version: '$(version)'
 - stage: 'Release'
   variables:
     artifactsDirectory: '$(Pipeline.Workspace)/artifacts'
