--- a/pipelines/templates/stages/build.yml
+++ b/pipelines/templates/stages/build.yml
@@ -3,7 +3,6 @@ parameters:
   configuration: 'Debug' # 'Debug' or 'Release'
   tag: false # true if the source needs to be tagged
   publish: false # true if artifacts need to be published
-  version: '0.0.0'
   dependsOn: []
 
 stages:
@@ -17,7 +16,6 @@ stages:
     artifactPath: '$(projectDir)\bin\${{ parameters.configuration }}'
     solutionXmlPath: '$(projectDir)\Other\Solution.xml'
     controlManifestXmlPath: 'src\TimeZoneDisplay\ControlManifest.Input.xml'
-    version: '${{ parameters.version }}'
 
   dependsOn: ${{ parameters.dependsOn }}
   jobs:
@@ -42,13 +40,13 @@ stages:
         BUILD_NUMBER: $(build.buildNumber)
         SOLUTION_XML_PATH: $(solutionXmlPath)
     - powershell: |
-        echo "Updating control version: $($env:CONTROL_VERSION)"
+        echo "Updating control version: $($env:BUILD_NUMBER)"
         $xml = [xml](gc "$($env:CONTROL_MANIFEST_XML_PATH)")
-        $xml.manifest.control.version = "$($env:CONTROL_VERSION)";
+        $xml.manifest.control.version = "$($env:BUILD_NUMBER)";
         $xml.Save("$($env:CONTROL_MANIFEST_XML_PATH)")
       displayName: 'Update control version'
       env:
-        CONTROL_VERSION: "$(version)-$(build.buildId)"
+        BUILD_NUMBER: "$(build.buildNumber)"
         CONTROL_MANIFEST_XML_PATH: $(controlManifestXmlPath)
     - task: VSBuild@1
       displayName: "Build"
